--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "TestElectron",
+  "name": "hello_electron",
   "version": "1.0.0",
   "description": "A demo of electron.",
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
-    "build": "mkdir build & cd build & electron-packager .. --platform=win32 --arch=x64 --overwrite",
-    "build--all": "mkdir build & cd build & electron-packager .. --platform=all --arch=all --overwrite"
+    "build--w64": "mkdir build & cd build & electron-packager .. AppName --icon ../logo.ico --platform=win32 --arch=x64 --overwrite",
+    "build--all": "mkdir build & cd build & electron-packager .. AppName --icon ../logo.ico --platform=all --arch=all --overwrite"
   },
   "keywords": [],
   "author": "",
